--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
-{
+ 
+ 
+ {
+  "homepage": "https://Devendrabhuarya.github.io/firstweb",
   "name": "deven",
   "version": "0.1.0",
   "private": true,
@@ -19,10 +22,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "5.0.0", 
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
